Thu Mar 31 06:53:14 2005  Chad Elliott  <elliott_c@ociweb.com>

        * combine_dsw.pl:

          Added a new script to combine multiple dsw's into one.

        * modules/CBXProjectCreator.pm:

          Inherit from WinProjectBase to pick up the validated_directory
          method.

        * modules/VC6ProjectCreator.pm:
        * modules/WinProjectBase.pm:

          Moved the validated_directory method out of VC6ProjectCreator and
          into WinProjectBase.  Since $(...) could contain a drive letter,
          no Windows based project can have $(...) in the intermediate
          directory name.

Tue Mar 29 07:56:08 2005  Chad Elliott  <elliott_c@ociweb.com>

        * modules/Creator.pm:

          Fixed a bug in the subtraction code that would remove a portion of
          an entry if only part of the existing value matched the string
          being subtracted.

        * README:
        * modules/ProjectCreator.pm:
        * modules/TemplateParser.pm:
        * templates/bmake.mpd:
        * templates/em3vcp.mpd:
        * templates/html.mpd:
        * templates/make.mpd:
        * templates/nmake.mpd:
        * templates/vc6dsp.mpd:
        * templates/vc7.mpd:

          Added support for the new postbuild keyword.

        * templates/cbxdll.mpt:
        * templates/cbxexe.mpt:
        * templates/em3vcpdll.mpt:
        * templates/em3vcpdllexe.mpt:
        * templates/em3vcplib.mpt:
        * templates/em3vcplibexe.mpt:
        * templates/ghs.mpd:
        * templates/ghscommon.mpt:
        * templates/ghsdll.mpt:
        * templates/ghslib.mpt:
        * templates/makedll.mpt:
        * templates/nmakedll.mpt:
        * templates/nmakeexe.mpt:
        * templates/sle.mpd:
        * templates/sledll.mpt:
        * templates/sleexe.mpt:
        * templates/unixcommon.mpt:
        * templates/vc6dspdll.mpt:
        * templates/vc6dspdllexe.mpt:
        * templates/vc6dsplib.mpt:
        * templates/vc6dsplibexe.mpt: